# Uni_ReversiParallel

./: CS3S666_CW1_Connor_Moloney_Report.docx  README.md
Parallel Reversi Assessment/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  mailbox.c  mailbox.h  multiprocessor.c  multiprocessor.h  o64bit.c  paro64bit.c  version.c
Parallel Reversi Assessment/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
